--- a/src/i18n/pl_PL.csv
+++ b/src/i18n/pl_PL.csv
@@ -11,6 +11,7 @@ Incorrect currency: %1=Nieprawidłowa waluta: %1
 Incorrect email address: %1=Nieprawidłowy adres email: %1
 Incorrect first name: %1=Nieprawidłowe imię: %1
 Incorrect seller id: %1=Nieprawidłowy identyfikator sprzedawcy: %1
+Incorrect seller id for foreign currencies: %1=Nieprawidłowy identyfikator sprzedawcy dla obcych walut: %1
 Incompatible type of parameter: %1=Niekompatybilny typ parametru: %1
 Incorrect language: %1=Nieprawidłowy język: %1
 Incorrect last name: %1=Nieprawidłowe nazwisko: %1
@@ -22,11 +23,13 @@ Incorrect operation type: %1=Nieprawidłowy typ operacji: %1
 Incorrect Dotpay password=Nieprawidłowe hasło Dotpay
 Incorrect phone number: %1=NIeprawidłowy numer telefonu: %1
 Incorrect seller pin=Nieprawidłowy pin sprzedawcy
+Incorrect seller pin for foreign currencies=Nieprawidłowy pin sprzedawcy dla obcych walut
 Incorrect post code: %1=Nieprawidłowy kod pocztowy: %1
 Incorrect format of requested values: %1=Nieprawidłowy format żądanych danych: %
 Incorrect street: %1=Nieprawidłowa nazwa ulicy: %1
 Incorrect url address: %1=Nieprawidłowy adres url: %1
 Incorrect Dotpay username: %1=Nieprawidłowa nazwa użytkownika Dotpay
+Incorrect Dotpay login or password=Nieprawidłowy login lub hasło Dotpay
 Returned type is not compatible with an expected type. Details: %1=Zwracany typ nie jest kompatybilny z oczekiwanym. Szczegóły: %1
 Name of the object '%1' is empty=Nazwa obiektu '%1' jest pusta
 Object '%1' is not found=Obiekt '%1' nie został znaleziony
