--- a/src/i18n/pl_PL.csv
+++ b/src/i18n/pl_PL.csv
@@ -52,7 +52,7 @@ The given currency is unknown=Wybrana waluta jest nieznana
 There was an unidentified error. Please contact to your seller and give him the order number=Wystąpił niezidentyfikowany błąd. Proszę skontaktować się ze sprzedawcą i podać mu numer zamówienia
 Account is disabled=Konto jest zablokowane
 Error with confirmation data from Dotpay server has been occured=Wystąpił błąd z danymi potwierdzenia z serwera Dotpay
-Information about shop configuration which can be caught and displayed=Informacja o konfiguracji sklepu, która może być przechwycona i wyświetlona
+Information about shop configuration which can be caught and displayed=Informacja o konfiguracji sklepu która może być przechwycona i wyświetlona
 Seller with given id (%1) is not recognized=Sprzedawca o podanym identyfikatorze (%1) jest nierozpoznany
 Account of seller is not recognized by Dotpay server=Konto sprzedawcy nie jest rozpoznane przez serwer Dotpay
 Channel is not recognized by Dotpay server=Kanał nie jest rozpoznany przez serwer Dotpay
